--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-snowflakes": "^1.0.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
